<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityQ">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="246dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/lol_logo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="211dp"
            android:layout_gravity="center"
            android:contentDescription="@string/zeri"
            android:src="@drawable/zeri_splash" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zeri_opis"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/imageButtonP"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/passiv"
                android:onClick="openP"
                android:text="P" />

            <Button
                android:id="@+id/imageButtonQ"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/Q"
                android:text="Q"/>

            <Button
                android:id="@+id/imageButtonW"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="openW"
                android:contentDescription="@string/W"
                android:text="W" />

            <Button
                android:id="@+id/imageButtonE"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="openE"
                android:contentDescription="@string/E"
                android:text="E" />

            <Button
                android:id="@+id/imageButtonR"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="openR"
                android:contentDescription="@string/R"
                android:text="R" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nazwaq"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="350dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:text="@string/Opisq"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>